# linchain

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
client/: .env  Cargo.toml
client/src/: main.rs
peer/: .env  Cargo.toml
peer/src/: blockchain.rs  crypto.rs  main.rs  network.rs  peer.rs  storage.rs
src/: crypto.rs  lib.rs  main.rs  network.rs  peer.rs  storage.rs
tests/: lib-test.rs
