[package]
name = "linchain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
serde = "1.0.219"
serde-jsonlines = "0.7.0"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
hex = "0.4.3"
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["display"]  }
bcs = "0.1.6"
redact = "0.1.10"

[dev-dependencies]
mockall = "0.13.1"
