[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
peer = { path = "../peer" }
chrono = { version = "0.4.41", features = ["serde"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
bcs = "0.1.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = { version = "0.55.0", features = ["macros", "noise", "ping", "mdns", "tcp", "tokio", "yamux", "gossipsub"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = "1.0.219"
envy = "0.4.2"
dotenvy = "0.15.7"